[package]
name = "pi_benchmarks"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
humantime = "2.1.0"
raw-cpuid = "10.2.0"

[build-dependencies]
cc = "1.0.72"
nasm-rs = "0.2.4"